--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/roboto": "^4.5.1",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.2",
+    "@prisma/client": "^3.2.1",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.0",
     "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next-auth": "^4.0.0-beta.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.24",
+    "prisma": "^3.2.1",
     "typescript": "4.4.3"
   }
 }
